﻿drkns 02.04.2015 23:15:07 +0200 - build 4331

1. Рефакторинг.

2. Из меню дополнения в комстроке не вызывалось меню плагинов.

zg 02.04.2015 16:15:43 +0200 - build 4330

1. с форума: Получить содержимое ком. строки плагином из юзер меню.

w17 01.04.2015 20:26:38 +0300 - build 4329

1. Некорректно работал поиск по словам Find file, если слово попадало ровно на конец блока.

shmuel 29.03.2015 20:49:04 +0200 - build 4328

1. Уточнение 4261.

drkns 28.03.2015 16:51:12 +0200 - build 4327

1. Рефакторинг.

w17 26.03.2015 13:57:16 +0300 - build 4326

1. Уточнение 4324

w17 26.03.2015 13:51:15 +0300 - build 4325

1. Уточнение 4324

w17 25.03.2015 13:23:12 +0300 - build 4324

1. Experimental: Продолжение 3717 (M#2208: Запоминать, в какой папке была запущена команда).
   Новый параметр конфигурации System.PerFolderCmdHistory.
   Умолчание = false, если true - в историю записываюся одинаковые команды
   если каталоги запуска отличаются. В стандартной истории фар дубли команд не показываются.

drkns 21.03.2015 16:50:29 +0200 - build 4323

1. Копирование текста из полей ввода могло вызывать ассерты.

zg 21.03.2015 16:47:45 +0200 - build 4322

1. удалена пасхалка от валентина. если, например, в командной строке ввести магический набор букв:
   lua:far.InputRecordToName ({EventType=far.Flags.KEY_EVENT,KeyDown=true,RepeatCount=1,VirtualKeyCode=45,VirtualScanCode=82,UnicodeChar=0,ControlKeyState=258})
   вызывался граббер.

zg 21.03.2015 00:32:43 +0200 - build 4321

1. событие FARMACRO_KEY_EVENT удалено.

2. временное уточнение 4318 для нажатий shift/alt/ctrl.

drkns 20.03.2015 09:36:40 +0200 - build 4320

1. Продолжение 4309.

drkns 19.03.2015 22:55:49 +0200 - build 4319

1. Уточнение 4280.

zg 19.03.2015 19:12:19 +0200 - build 4318

1. рефакторинг: обработка нажатий клавиш.

w17 19.03.2015 13:08:26 +0300 - build 4317

1. M#2971: Падение при использовании регулярного выражения с большим количеством групп

zg 19.03.2015 00:34:46 +0200 - build 4316
